# pulsar

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  after.futil  before.futil  redesign.md  rustfmt.toml
.github/workflows/: ci.yaml
calyx-builder/: Cargo.toml
calyx-builder/src/: lib.rs
crates/calyx-builder/: Cargo.toml
crates/calyx-builder/src/: lib.rs
crates/pulsar-backend/src/: calyx.rs  calyx_backend.rs  lib.rs
crates/pulsar-backend/src/calyx/: builder.rs
crates/pulsar-backend/src/calyx/builder/: macros.rs
crates/pulsar-frontend/src/: ast.rs  attribute.rs  lib.rs  parser.rs  static_analysis.rs  token.rs  ty.rs
crates/pulsar-ir/: Cargo.toml
crates/pulsar-ir/src/: basic_block.rs  control_flow_graph.rs  generator.rs  label.rs  lib.rs  variable.rs
crates/pulsar-utils/src/: digraph.rs  disjoint_set.rs  environment.rs  error.rs  lib.rs  loc.rs
data/: idea.pl  idea.plsr  temp.plsr  test.pl  test.plsr  test2.plsr
pulsar-backend/: Cargo.toml
pulsar-backend/src/: calyx.rs  lib.rs  target.rs  transform.rs
pulsar-backend/src/transform/: agen.rs
pulsar-frontend/: Cargo.toml
pulsar-frontend/src/: ast.rs  attribute.rs  lexer.rs  lib.rs  op.rs  parser.rs  static_analysis.rs  syntax.ebnf  token.rs  type_inferer.rs
pulsar-frontend/src/ast/: decl.rs  expr.rs  node.rs  pretty_print.rs  stmt.rs  stmt_ty.rs  ty.rs
pulsar-ir/: Cargo.toml
pulsar-ir/src/: analysis.rs  branch_condition.rs  cell.rs  component.rs  control.rs  control_flow_graph.rs  from_ast.rs  generator.rs  label.rs  lib.rs  memory.rs  operand.rs  pass.rs  port.rs  variable.rs  visitor.rs
pulsar-ir/src/analysis/: side_effect.rs  timing.rs
pulsar-ir/src/pass/: calculate_timing.rs  canonicalize.rs  cell_alloc.rs  collapse_control.rs  copy_prop.rs  dead_code.rs  rewrite_accesses.rs  well_formed.rs
pulsar-utils/: Cargo.toml
pulsar-utils/src/: digraph.rs  disjoint_set.rs  disjoint_sets.rs  environment.rs  error.rs  format.rs  id.rs  lib.rs  loc.rs  mutcell.rs  pool.rs  rrc.rs  span.rs
site/: package-lock.json  package.json
site/src/routes/: +page.svelte
src/: backend.rs  context.rs  frontend.rs  ir.rs  lib.rs  main.rs  utils.rs
src/backend/: calyx_backend.rs  import.futil
src/frontend/: ast.rs  infer.rs  lexer.rs  op.rs  parser.rs  static_analysis.rs  token.rs  ty.rs
src/ir/: basic_block.rs  branch_condition.rs  control_flow_graph.rs  generator.rs  label.rs  operand.rs  variable.rs
src/utils/: context.rs  digraph.rs  disjoint_set.rs  dsu.rs  environment.rs  error.rs  format.rs  id.rs  loc.rs  mutcell.rs
temp/: tb.sv  test.sv
tests/: add_test.rs  loc.rs  test_ast_format.rs  test_calyx_verilog.rs  test_context.rs  test_digraph.rs  test_dsu.proptest-regressions  test_dsu.rs  test_environment.rs  test_id_gen.proptest-regressions  test_id_gen.rs  test_lexer.rs  test_loc.rs  test_parser.rs  test_token_format.proptest-regressions  test_token_format.rs  test_typeinferer.rs
tests/calyx-verilog/: Makefile  map.cpp  map.plsr  map_single.cpp  map_single.plsr  math.cpp  math.plsr  square.cpp  square.plsr  twice.cpp  twice.plsr
tests/calyx-verilog/harness/: harness.cpp  invoke.bash  prefix.h  test.h
tests/calyx-verilog/obj_dir/: 0.d  V_pulsar_Smain_q_q  V_pulsar_Smain_q_q.cpp  V_pulsar_Smain_q_q.h  V_pulsar_Smain_q_q.mk  V_pulsar_Smain_q_q__ALL.cpp  V_pulsar_Smain_q_q__ALL.d  V_pulsar_Smain_q_q__Syms.cpp  V_pulsar_Smain_q_q__Syms.h  V_pulsar_Smain_q_q___024root.h  V_pulsar_Smain_q_q___024root__DepSet_h0da10a89__0.cpp  V_pulsar_Smain_q_q___024root__DepSet_h0da10a89__0__Slow.cpp  V_pulsar_Smain_q_q___024root__DepSet_h81a5703a__0.cpp  V_pulsar_Smain_q_q___024root__DepSet_h81a5703a__0__Slow.cpp  V_pulsar_Smain_q_q___024root__Slow.cpp  V_pulsar_Smain_q_q__pch.h  V_pulsar_Smain_q_q__ver.d  V_pulsar_Smain_q_q_classes.mk  harness.d  sim_main.d  verilated.d  verilated_threads.d
tests/calyx-verilog/phony/harness/: test.h
tests/data/: in1.pl  in2.pl  in3.pl  infer1.plsr  infer10.pl  infer10.plsr  infer11.plsr  infer12.plsr  infer13.plsr  infer14.plsr  infer15.plsr  infer16.plsr  infer2.plsr  infer3.plsr  infer4.plsr  infer5.plsr  infer6.plsr  infer7.pl  infer7.plsr  infer8.plsr  infer9.pl  infer9.plsr  parser1.plsr  parser10.plsr  parser11.plsr  parser5.plsr  parser6.plsr  parser7.plsr  parser8.plsr  parser9.plsr  parser_in1.pl  parser_in2.plsr  parser_in3.pl  parser_in4.plsr  parser_in5.pl  parser_in6.plsr  parser_in7.plsr
tests/snapshots/: test_ast_format__tests__format_function-2.snap  test_lexer__tests__lexer-2.snap  test_lexer__tests__lexer-3.snap  test_lexer__tests__lexer.snap  test_lexer__tests__lexer_1.snap  test_lexer__tests__lexer_2.snap  test_lexer__tests__lexer_3.snap  test_lexer__tests__parser_1.snap  test_lexer__tests__parser_2.snap  test_lexer__tests__parser_3.snap  test_parser__tests__parser-2.snap  test_parser__tests__parser-3.snap  test_parser__tests__parser-4.snap  test_parser__tests__parser-5.snap  test_parser__tests__parser-6.snap  test_parser__tests__parser-7.snap  test_parser__tests__parser-8.snap  test_parser__tests__parser.snap  test_parser__tests__parser_1.snap  test_parser__tests__parser_10.snap  test_parser__tests__parser_11.snap  test_parser__tests__parser_2.snap  test_parser__tests__parser_3.snap  test_parser__tests__parser_4.snap  test_parser__tests__parser_5.snap  test_parser__tests__parser_6.snap  test_parser__tests__parser_7.snap  test_parser__tests__parser_8.snap  test_parser__tests__parser_9.snap  test_typeinferer__tests__infer13.snap  test_typeinferer__tests__infer14.snap  test_typeinferer__tests__infer15.snap  test_typeinferer__tests__infer16.snap  test_typeinferer__tests__parser_1.snap  test_typeinferer__tests__parser_10.snap  test_typeinferer__tests__parser_11.snap  test_typeinferer__tests__parser_12.snap  test_typeinferer__tests__parser_13.snap  test_typeinferer__tests__parser_14.snap  test_typeinferer__tests__parser_15.snap  (+36 more)
