[package]
name = "pulsar"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
calyx-backend = "0.7.1"
calyx-frontend = "0.7.1"
calyx-ir = "0.7.1"
calyx-opt = "0.7.1"
calyx-utils = "0.7.1"
colored = "2"
lazy_static = "1.4.0"

[dev-dependencies]
proptest = "1.4.0"
insta = { version = "1.38.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
disable_color = ["colored/no-color"]
