[workspace]
members = ["pulsar-frontend", "pulsar-ir", "pulsar-backend", "pulsar-utils"]
exclude = ["crates/calyx-builder"]

[workspace.package]
name = "pulsar"
description = "A high-level programming language for building hardware accelerators"
homepage = "https://github.com/ethanuppal/pulsar/tree/main"
repository = "https://github.com/ethanuppal/pulsar/tree/main"
authors = ["Ethan Uppal"]
keywords = ["compiler"]
categories = ["compilers"]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license-file = "LICENSE"

[workspace.dependencies]
colored = "2"
lazy_static = "1.4.0"
calyx-backend = "0.7.1"
calyx-frontend = "0.7.1"
calyx-ir = "0.7.1"
calyx-opt = "0.7.1"
calyx-utils = "0.7.1"
pulsar-utils = { path = "pulsar-utils", version = "0.0.0" }
pulsar-ir = { path = "pulsar-ir", version = "0.0.0" }
pulsar-frontend = { path = "pulsar-frontend", version = "0.0.0" }
pulsar-backend = { path = "pulsar-backend", version = "0.0.0" }
pulsar-calyx-builder = { path = "crates/calyx-builder", version = "0.0.0" }

[package]
name = "pulsar-lang"
default-run = "pulsar"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "pulsar"
path = "src/main.rs"

[features]
disable_color = ["colored/no-color"]

[dependencies]
colored.workspace = true
lazy_static.workspace = true
calyx-utils.workspace = true
calyx-ir.workspace = true
calyx-frontend.workspace = true
calyx-opt.workspace = true
pulsar-frontend.workspace = true
pulsar-ir.workspace = true
pulsar-backend.workspace = true
pulsar-utils.workspace = true
pulsar-calyx-builder.workspace = true
paste = "1.0.15"

[dev-dependencies]
proptest = "1.4.0"
insta = { version = "1.38.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
