[package]
name = "calyx-builder"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
calyx-utils = "0.7.1"
calyx-ir = "0.7.1"
calyx-frontend = "0.7.1"
pulsar-utils.workspace = true
