[package]
name = "pulsar-backend"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
pulsar-frontend.workspace = true
pulsar-ir.workspace = true
pulsar-utils.workspace = true
anyhow.workspace = true
# calyx-builder.workspace = true

# calyx-frontend.workspace = true
# calyx-ir.workspace = true
# calyx-backend.workspace = true
# calyx-opt.workspace = true
# calyx-utils.workspace = true
