[package]
name = "pulsar-ir"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
pulsar-frontend.workspace = true
pulsar-utils.workspace = true
inform.workspace = true
either.workspace = true
log.workspace = true
match_deref.workspace = true
